<resources>
    <string name="app_name">suitmediaApps</string>
    <string name="check">CHECK</string>
    <string name="nextPage">NEXT PAGE</string>
    <string name="name">Masukkan Nama</string>
    <string name="inputText">Masukkan Text</string>
    <string name="welcome">Welcome</string>
    <string name="secondScreen">Second Screen</string>
    <string name="choose">Choose a User</string>
    <string name="thirdScreen">Third Screen</string>


</resources>